# gh-pulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: bench_query.py  trending.sql  trending_hour_aligned_baseline.sql  trending_mv.sql  verify_equivalence.py
data/: 2026-06-01-15.preview.json
docs/: ARCHITECTURE.md  DATA_FLOW.md  PERFORMANCE.md  go-styleguide.md  python-styleguide.md
docs/adr/: 0001-clickhouse-for-olap-postgres-for-oltp.md  0002-go-for-ingest-python-for-api.md  0003-redpanda-as-kafka-broker.md  0004-at-least-once-delivery-idempotent-inserts.md  0005-portfolio-over-personal-tool.md  0006-structlog-for-logging.md  0007-hybrid-data-epochs.md  0008-gh-events-topic-design.md  0009-opentelemetry-tracing-jaeger.md  0010-api-key-permission-bitflags.md  README.md
infra/clickhouse/backfill/: 002_mv_hourly_backfill.sql
infra/clickhouse/migrations/: 001_events.sql  002_mv_hourly.sql
infra/grafana/provisioning/dashboards/: dashboards.yml  gh-pulse-overview.json
infra/prometheus/: prometheus.yml
infra/redpanda/: create-topics.sh
services/gh-collector/: .golangci.yml  go.mod  go.sum
services/gh-collector/cmd/gh-collector/: main.go  main_test.go
services/gh-collector/internal/archive/: archive.go  archive_test.go
services/gh-collector/internal/archive/testdata/: sample_hour.jsonl
services/gh-collector/internal/events/: events.go  events_test.go
services/gh-collector/internal/events/testdata/: sample_events.json
services/gh-collector/internal/logfile/: logfile.go  logfile_test.go
services/gh-collector/internal/model/: event.go  event_test.go
services/gh-collector/internal/producer/: producer.go  producer_test.go
services/gh-collector/internal/tracing/: tracing.go
services/pulse-api/: Dockerfile  alembic.ini  pyproject.toml
services/pulse-api/alembic/: env.py  script.py.mako
services/pulse-api/alembic/versions/: 0001_api_keys_and_saved_reports.py  0002_api_key_permissions.py
services/pulse-api/app/: admin_auth.py  admin_routes.py  auth.py  cache.py  cli.py  completeness.py  config.py  errors.py  helpers.py  http_cache.py  logging_config.py  logs_viewer.py  main.py  middleware.py  models.py  pagination.py  queries.py  query_params.py  rate_limit.py  tracing.py
services/pulse-api/app/admin/: auth.py  backfill.py  completeness.py  logs_viewer.py  routes.py
services/pulse-api/app/admin/templates/admin/: backfill_command_fragment.html  dashboard.html  key_issue_result_fragment.html  keys_fragment.html
services/pulse-api/app/api/: cache.py  http_cache.py  pagination.py  queries.py  query_params.py  routes.py  schemas.py
services/pulse-api/app/core/: config.py  errors.py  logging_config.py  middleware.py  tracing.py
services/pulse-api/app/security/: api_key.py  keys.py
services/pulse-api/app/templates/admin/: completeness_fragment.html  logs_fragment.html
services/pulse-api/tests/: conftest.py  test_admin_routes_integration.py  test_analytics_routes_integration.py  test_auth_and_rate_limit_integration.py  test_backfill.py  test_cache.py  test_cli.py  test_completeness.py  test_core_logging_config.py  test_end_to_end_pipeline.py  test_health.py  test_helpers.py  test_http_cache.py  test_logging_config.py  test_logs_viewer.py  test_main_lifespan_integration.py  test_middleware.py  test_models.py  test_openapi.py  test_pagination.py  test_postgres_migrations_integration.py  test_queries.py  test_rate_limit.py  test_routes.py  test_schemas.py
services/pulse-consumer/: Dockerfile  pyproject.toml
services/pulse-consumer/consumer/: __main__.py  clickhouse.py  config.py  consumer.py  dlq.py  logging_config.py  metrics.py  model.py  tracing.py
services/pulse-consumer/tests/: test_batching.py  test_consumer_integration.py  test_consumer_recovery.py  test_consumer_resilience_integration.py  test_lag_metric.py  test_logging_config.py  test_model.py
