[project]
name = "gh-pulse"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/pulse-api"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "httpx",       # ASGITransport для тестов эндпоинтов без поднятого сервера
]

[tool.pytest.ini_options]
testpaths = ["services/pulse-api/tests"]
# app не установлен как пакет (package = false), а pytest запускается из корня workspace —
# без этого `import app` в тестах не резолвится.
pythonpath = ["services/pulse-api"]
asyncio_mode = "auto"

[tool.ruff]
preview = true
fix = true
target-version = "py313"
line-length = 120
indent-width = 4
exclude = [
    # Форматирование Python-блоков внутри Markdown — preview-фича ruff, и она переписывает
    # намеренно компактные примеры в docs/. Хук ruff-format .md всё равно не трогает
    # (types_or: python/pyi/jupyter), так что без исключения CI проверял бы строже хуков.
    "*.md",
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".idea",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "B027",       # empty-method-without-abstract-decorator
    "CPY001",     # missing-copyright-notice — покрыто LICENSE на уровне репозитория
    "D100",       # undocumented-public-module
    "D101",       # undocumented-public-class — докстринг только когда правда нужен, не по умолчанию
    "D102",       # undocumented-public-method
    "D103",       # undocumented-public-function
    "D104",       # undocumented-public-package
    "D106",       # undocumented-public-nested-class
    "D107",       # undocumented-public-init
    "D200",       # unnecessary-multiline-docstring
    "D203",       # incorrect-blank-line-before-class
    "D205",       # missing-blank-line-after-summary
    "D212",       # multi-line-summary-first-line
    "D401",       # non-imperative-mood (докстринги на русском)
    "D404",       # docstring-starts-with-this
    "D405",       # non-capitalized-section-name
    "D415",       # missing-terminal-punctuation
    "FBT003",     # boolean-positional-value-in-call
    "FURB180",    # meta-class-abc-meta
    "ISC003",     # explicit-string-concatenation
    "PERF401",    # manual-list-comprehension
    "PLC0415",    # not-top-level-import
    "PLR09",      # too-many-locals/branches/arguments/...
    "PLR2004",    # magic-value-comparison
    "PLR6301",    # no-self-use
    "RUF001",     # ambiguous-unicode-character-string (кириллица)
    "RUF002",     # ambiguous-unicode-character-docstring
    "RUF003",     # ambiguous-unicode-character-comment
    "S608",       # hardcoded-sql-expression — сырой SQL к ClickHouse/Postgres, см. CLAUDE.md
    "TRY003",     # long exception messages (тексты ошибок на русском)

    # несовместимо с форматером ruff — официальная рекомендация
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["S101"]  # assert — рабочий инструмент pytest, а не забытая отладка

[tool.ruff.lint.isort]
# Внутри сервиса ruff определяет `app` как first-party по расположению файла, а в tests/ — уже нет,
# и импорт уезжал бы в третью сторону. Явно называем корни пакетов.
known-first-party = ["app"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["build/", "dist/", "\\.venv/"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
