[project]
name = "gh-pulse"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/pulse-api", "services/pulse-consumer"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "httpx",       # ASGITransport для тестов эндпоинтов без поднятого сервера
    "testcontainers[clickhouse,kafka,postgres,redis]>=4.14.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["services/pulse-api/tests", "services/pulse-consumer/tests"]
# app/consumer не установлены как пакеты (package = false), а pytest запускается из корня
# workspace — без этого `import app`/`import consumer` в тестах не резолвится.
pythonpath = ["services/pulse-api", "services/pulse-consumer"]
# Оба сервиса называют свой пакет тестов одинаково — tests/. С дефолтным import-mode=prepend
# это два разных каталога, регистрирующихся в sys.modules под одним и тем же именем "tests":
# второй пакет, попавший в очередь импорта, ловит ModuleNotFoundError на собственных файлах.
# importlib импортирует каждый тестовый модуль по пути файла, не полагаясь на глобальный
# sys.modules — коллизия по имени пакета исчезает без переименования каталогов.
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"

[tool.ruff]
preview = true
fix = true
target-version = "py313"
line-length = 120
indent-width = 4
exclude = [
    # Форматирование Python-блоков внутри Markdown — preview-фича ruff, и она переписывает
    # намеренно компактные примеры в docs/. Хук ruff-format .md всё равно не трогает
    # (types_or: python/pyi/jupyter), так что без исключения CI проверял бы строже хуков.
    "*.md",
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".idea",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    # Сгенерированные Alembic ревизии (задача 2.5) — DDL сырым SQL в теле upgrade/downgrade, не
    # прикладной код сервиса. Каталог намеренно без __init__.py (alembic/ иначе перекрыл бы
    # site-packages alembic на sys.path, см. комментарий у per-file-ignores env.py), поэтому вместо
    # разовых INP001-игноров на каждый новый файл ревизии исключаем директорию целиком.
    "services/pulse-api/alembic/versions",
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "B027",       # empty-method-without-abstract-decorator
    "CPY001",     # missing-copyright-notice — покрыто LICENSE на уровне репозитория
    "D100",       # undocumented-public-module
    "D101",       # undocumented-public-class — докстринг только когда правда нужен, не по умолчанию
    "D102",       # undocumented-public-method
    "D103",       # undocumented-public-function
    "D104",       # undocumented-public-package
    "D106",       # undocumented-public-nested-class
    "D107",       # undocumented-public-init
    "D200",       # unnecessary-multiline-docstring
    "D203",       # incorrect-blank-line-before-class
    "D205",       # missing-blank-line-after-summary
    "D212",       # multi-line-summary-first-line
    "D401",       # non-imperative-mood (докстринги на русском)
    "D404",       # docstring-starts-with-this
    "D405",       # non-capitalized-section-name
    "D415",       # missing-terminal-punctuation
    "FBT003",     # boolean-positional-value-in-call
    "FURB180",    # meta-class-abc-meta
    "ISC003",     # explicit-string-concatenation
    "PERF401",    # manual-list-comprehension
    "PLC0415",    # not-top-level-import
    "PLR09",      # too-many-locals/branches/arguments/...
    "PLR2004",    # magic-value-comparison
    "PLR6301",    # no-self-use
    "RUF001",     # ambiguous-unicode-character-string (кириллица)
    "RUF002",     # ambiguous-unicode-character-docstring
    "RUF003",     # ambiguous-unicode-character-comment
    "S608",       # hardcoded-sql-expression — сырой SQL к ClickHouse/Postgres, см. docs/ARCHITECTURE.md
    "TRY003",     # long exception messages (тексты ошибок на русском)

    # несовместимо с форматером ruff — официальная рекомендация
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["S101"]  # assert — рабочий инструмент pytest, а не забытая отладка
# bench/*.py — автономные CLI-утилиты для воспроизведения цифр из docs/PERFORMANCE.md, не часть
# продукта. Их работа и есть печать в stdout и вызов доверенного локального clickhouse-client —
# правила, рассчитанные на pulse-api/pulse-consumer, здесь не по адресу: T201 (print — единственный
# интерфейс CLI-скрипта), S404/S603/S607 (subprocess — вызывает фиксированный доверенный бинарник,
# не пользовательский ввод), PLW1510 (subprocess.run без check= — код возврата явно проверяется
# вручную через returncode), SIM115 (open() без контекст-менеджера — короткоживущий скрипт, файл
# закрывается при выходе),
# DOC201 (Returns в докстринге — избыточно для двух однострочных докстрингов на весь файл).
"bench/*.py" = ["T201", "S404", "S603", "S607", "PLW1510", "SIM115", "DOC201"]
# app/cli.py — CLI-утилита выпуска API-ключа (задача 2.5), тот же случай, что bench/*.py: печать
# сырого ключа в stdout — единственный способ его показать оператору, это не забытый debug-print.
"services/pulse-api/app/cli.py" = ["T201"]
# alembic/env.py лежит в каталоге без __init__.py (см. exclude выше) — сам файл при этом остаётся
# обычным модулем, который alembic импортирует по пути, а не через python-пакет `alembic.env`, так
# что implicit-namespace-package здесь не баг, а форма, которую требует сам alembic.
"services/pulse-api/alembic/env.py" = ["INP001"]

[tool.ruff.lint.isort]
# Внутри сервиса ruff определяет `app`/`consumer` как first-party по расположению файла, а в
# tests/ — уже нет, и импорт уезжал бы в третью сторону. Явно называем корни пакетов.
known-first-party = ["app", "consumer"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["build/", "dist/", "\\.venv/"]
# Оба сервиса ставятся не как пакеты (package = false, см. tool.uv), поэтому `import app`/
# `import consumer` резолвится только через путь поиска модулей, а не установку. mypy проверяет
# каждый сервис отдельным инвокейшном (см. комментарий у python-lint в .github/workflows/ci.yml —
# иначе коллизия на одноимённом пакете `tests`), но задаче 2.8 понадобился один тест
# (test_end_to_end_pipeline.py), который живёт в pulse-api/tests и целиком по делу импортирует
# consumer.* (Kafka → консьюмер → ClickHouse — весь путь, а не только API-часть). mypy_path с обоими
# сервисами даёт транзитивным импортам резолвиться независимо от того, какой из двух — цель
# конкретного инвокейшна; коллизии с `tests` это не создаёт, потому что каждый прогон по-прежнему
# обходит файлы только одного каталога-цели, а не обоих сразу.
mypy_path = ["services/pulse-api", "services/pulse-consumer"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# aiokafka и testcontainers не отгружают py.typed / stub-пакеты на момент написания — граница с
# нетипизированной библиотекой, а не собственный недосмотр (styleguide §2.2).
module = ["aiokafka.*", "testcontainers.*"]
ignore_missing_imports = true
