[project]
name = "pulse-api"
version = "0.1.0"
description = "Аналитическое REST API GH Pulse поверх ClickHouse/PostgreSQL/Redis"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "prometheus-client",
    "structlog",
    "clickhouse-connect[async]>=1.4.2",
    "asyncpg>=0.31.0",
    "redis>=8.0.1",
]

[tool.uv]
package = false
